--- a/2truthsandai/about.html
+++ b/2truthsandai/about.html
@@ -7,6 +7,7 @@
   <!-- Centered Logo Section -->
   <div id="centerLogo">
     <img src="eye.webp" alt="Animated Eye" width="50" />
+    <img src="eye.webp" width="50" alt="Eyes animation" />
 
 
   </div>
