--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
+  <link rel="icon" type="image/svg+xml" href="favi.svg">
+
   <!-- Centered Logo Section -->
   <div id="centerLogo">
     <img src="eye.webp" alt="Animated Eye" width="100" />
