--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <a href="prints.html" class="link top-left">prints</a>
-  <a href="https://marywildesign.com" class="link bottom-left">made by mary</a>
+  <a href="https://marywildesign.com" class="link bottom-left">made by marywildesign@gmail.com</a>
   <a href="index.html" class="link top-right">rules ✕</a>
   <a href="generate.html?start=true" class="link bottom-right">play →</a>
 
