--- a/prints.html
+++ b/prints.html
@@ -183,7 +183,7 @@
 
   <!-- Intro Text -->
   <h3>2Truths&AI</h3>
-  <p>One is AI. Which print is the 'liar'? Email to purchase.</p>
+  <p>One is AI. Which print is the 'liar'? Email marywildesign to purchase.</p>
 
   <!-- Gallery -->
   <div class="print-gallery">
